# aurudinha

./: .gitignore  CMakeLists.txt  README.md  a11y_prefs.json  codigo.py  game.cpp  install_deps.sh  shell.nix
.github/workflows/: build-windows.yml  c-cpp.yml  cmake-multi-platform.yml  windows.yml
config/: CMakeLists.txt  cross-shell.nix  shell.nix
docs/: README.md  roteiro.md
scripts/: install-deps-linux.sh
src/: game.cpp
vn_app_autogen/: deps  moc_predefs.h
